--- a/project/game/game.vcxproj
+++ b/project/game/game.vcxproj
@@ -77,11 +77,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\Boy.cpp" />
+    <ClCompile Include="..\..\src\GameSystem.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
+    <ClCompile Include="..\..\src\Sprite.cpp" />
+    <ClCompile Include="..\..\src\StaticObj.cpp" />
+    <ClCompile Include="..\..\src\Vector2f.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\Graphics.h" />
-    <ClInclude Include="..\..\src\Objects.h" />
+    <ClInclude Include="..\..\src\Boy.h" />
+    <ClInclude Include="..\..\src\GameSystem.h" />
+    <ClInclude Include="..\..\src\ParticleSystem.h" />
+    <ClInclude Include="..\..\src\Sprite.h" />
+    <ClInclude Include="..\..\src\StaticObj.h" />
     <ClInclude Include="..\..\src\Vector2f.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
