--- a/project/game/game.vcxproj.filters
+++ b/project/game/game.vcxproj.filters
@@ -2,10 +2,18 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="..\..\src\main.cpp" />
+    <ClCompile Include="..\..\src\GameSystem.cpp" />
+    <ClCompile Include="..\..\src\Sprite.cpp" />
+    <ClCompile Include="..\..\src\Vector2f.cpp" />
+    <ClCompile Include="..\..\src\Boy.cpp" />
+    <ClCompile Include="..\..\src\StaticObj.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\ParticleSystem.h" />
+    <ClInclude Include="..\..\src\GameSystem.h" />
+    <ClInclude Include="..\..\src\Sprite.h" />
     <ClInclude Include="..\..\src\Vector2f.h" />
-    <ClInclude Include="..\..\src\Objects.h" />
-    <ClInclude Include="..\..\src\Graphics.h" />
+    <ClInclude Include="..\..\src\Boy.h" />
+    <ClInclude Include="..\..\src\StaticObj.h" />
   </ItemGroup>
 </Project>
