--- a/project/game/game.vcxproj
+++ b/project/game/game.vcxproj
@@ -78,15 +78,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Boy.cpp" />
+    <ClCompile Include="..\..\src\Furniture.cpp" />
     <ClCompile Include="..\..\src\GameSystem.cpp" />
     <ClCompile Include="..\..\src\main.cpp" />
+    <ClCompile Include="..\..\src\Monster.cpp" />
     <ClCompile Include="..\..\src\Sprite.cpp" />
     <ClCompile Include="..\..\src\StaticObj.cpp" />
     <ClCompile Include="..\..\src\Vector2f.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\Boy.h" />
+    <ClInclude Include="..\..\src\Furniture.h" />
     <ClInclude Include="..\..\src\GameSystem.h" />
+    <ClInclude Include="..\..\src\Monster.h" />
     <ClInclude Include="..\..\src\ParticleSystem.h" />
     <ClInclude Include="..\..\src\Sprite.h" />
     <ClInclude Include="..\..\src\StaticObj.h" />
